--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -3,10 +3,10 @@
 {%- else -%}
 	{%- set link = page.url | absoluteUrl(metadata.url) -%}
 {%- endif -%}
-<a rel="author" class="[ h-card p-author ]" href="https://ellyloel.com" hidden="">Elly Loel</a>
-<a class="[ u-url ]" href="{{ link }}" hidden=""></a>
+<a rel="author" class="[ h-card p-author ]" href="https://ellyloel.com" hidden>Elly Loel</a>
+<a class="[ u-url ]" href="{{ link }}" hidden></a>
 {% if syndication %}
 	{%- for entry in syndication -%}
-		<a rel="syndication" class="[ u-syndication ]" href="{{ entry }}" hidden=""></a>
+		<a rel="syndication" class="[ u-syndication ]" href="{{ entry }}" hidden></a>
 	{%- endfor -%}
 {% endif %}
