--- a/src/_includes/tags.njk
+++ b/src/_includes/tags.njk
@@ -5,7 +5,7 @@
 		{%- if tag === "Evergreen" -%}tree{%- endif -%}
 	{%- endset -%}
 	{%- if tag !== exclude -%}
-		<a href="/tags/{{ tag | slugify }}/" class="[ badge ] [ p-category ] [ neutral pill gap-1 text-decoration-none ]">
+		<a href="/tags/{{ tag | slugify }}/" class="[ badge ] [ p-category ] [ neutral pill gap-1 text-decoration-none ]" data-pagefind-filter="tags">
 			{%- if icon !== "fas:" -%}{%- inlineIcon icon -%}{%- endif -%}
 			{{- tag -}}
 		</a>
