--- a/src/input/css/blocks/search.css
+++ b/src/input/css/blocks/search.css
@@ -1,18 +1,30 @@
-#search-results-list {
-	list-style: revert;
-}
+pagefind-search {
+	display: block;
 
-.search-results-item {
-	display: flex;
-	flex-direction: column;
-	gap: var(--size-2);
-
-	> strong {
-		font-size: var(--font-size-4);
-	}
-
-	> code {
-		background-color: transparent;
-		padding: 0;
+	& form[role="search"] {
+		& input[type="text"] {
+			display: block;
+			inline-size: max(100%, var(--size-content-2));
+		}
 	}
 }
+
+[id="search-results"] {
+	--flow-space: var(--size-6);
+
+	> ol {
+		& li {
+			--flow-space: var(--size-6);
+
+			& p {
+				--flow-space: var(--size-2);
+			}
+
+			& .metadata {
+				color: var(--neutral-solid);
+				font-size: var(--font-size-0);
+			}
+		}
+	}
+}
+
