Updating date filters - Removing luxon - Removing unused/unneeded date filters - Updating date filters to keep desired functionality even with luxon

--- a/src/_includes/date.njk
+++ b/src/_includes/date.njk
@@ -5,5 +5,5 @@
 		datetime="{{ date | dateToISO }}"
 		data-pagefind-meta="date[datetime]"
 		data-pagefind-sort="date[datetime]"
-	>{{ date | dateToLocaleDateFull }}</time>
+	>{{ date | dateToLocale }}</time>
 </span>
