Updating gradient border utility class - Changing to be more CUBE CSS like

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -1,7 +1,7 @@
 ---
 layout: base-without-header.njk
 ---
-<header class="[ main-header ][ padding-block-end-6 gradient-border border-block-end-width ]">
+<header class="[ main-header ][ padding-block-end-6 gradient-border ]" data-gradient-border="block-end">
 	<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
 	<h1
 		id="content"
