--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -1,7 +1,7 @@
 ---
 layout: base-without-header.njk
 ---
-<header class="[ post-head ][ padding-block-end-6 gradient-border border-block-end-width ]" data-pagefind-ignore>
+<header class="[ post-head ][ padding-block-end-6 gradient-border ]" data-gradient-border="block-end" data-pagefind-ignore>
 	<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
 	<h1 id="content" tabindex="-1" class="[ p-name ][ line-height-1 margin-0 ]">{{ title }}</h1>
 	<div class="[ post-meta ][ margin-block-start-2 ]">
