--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,4 +1,4 @@
-<header class="[ site-head ] [ wrapper ]" style="--wrapper-size: 100ch;">
+<header class="[ site-head ] [ wrapper gradient-border ]" style="--wrapper-size: 100ch;">
 	<nav class="[ nav ][ flex flex-wrap gap-3 align-center ]">
 		<!-- link to home: http://microformats.org/wiki/rel-home -->
 		<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]"{% if page.url === "/" %} aria-current="page"{% endif %}>
