--- a/src/input/css/reset.css
+++ b/src/input/css/reset.css
@@ -130,11 +130,10 @@ a:not([class]) {
 		a[href],
 		area,
 		button,
-		input,
+		input:where([type="button"], [type="submit"], [type="reset"], [type="checkbox"], [type="radio"]),
 		label[for],
 		select,
 		summary,
-		textarea,
 		[tabindex]:not([tabindex*="-"])
 	) {
 	cursor: pointer;
