--- a/src/input/css/utilities/padding.css
+++ b/src/input/css/utilities/padding.css
@@ -1,3 +1,11 @@
+.padding-000 {
+	padding: var(--size-000);
+}
+
+.padding-00 {
+	padding: var(--size-00);
+}
+
 .padding-0 {
 	padding: 0;
 }
@@ -26,6 +34,54 @@
 	padding: var(--size-6);
 }
 
+.padding-7 {
+	padding: var(--size-7);
+}
+
+.padding-8 {
+	padding: var(--size-8);
+}
+
+.padding-9 {
+	padding: var(--size-9);
+}
+
+.padding-10 {
+	padding: var(--size-10);
+}
+
+.padding-11 {
+	padding: var(--size-11);
+}
+
+.padding-12 {
+	padding: var(--size-12);
+}
+
+.padding-13 {
+	padding: var(--size-13);
+}
+
+.padding-14 {
+	padding: var(--size-14);
+}
+
+.padding-15 {
+	padding: var(--size-15);
+}
+
+.padding-inline-000 {
+	padding-inline: var(--size-000);
+}
+
+.padding-inline-00 {
+	padding-inline: var(--size-00);
+}
+
+.padding-inline-0 {
+	padding-inline: 0;
+}
+
 .padding-inline-1 {
 	padding-inline: var(--size-1);
 }
@@ -48,6 +104,54 @@
 
 .padding-inline-6 {
 	padding-inline: var(--size-6);
+}
+
+.padding-inline-7 {
+	padding-inline: var(--size-7);
+}
+
+.padding-inline-8 {
+	padding-inline: var(--size-8);
+}
+
+.padding-inline-9 {
+	padding-inline: var(--size-9);
+}
+
+.padding-inline-10 {
+	padding-inline: var(--size-10);
+}
+
+.padding-inline-11 {
+	padding-inline: var(--size-11);
+}
+
+.padding-inline-12 {
+	padding-inline: var(--size-12);
+}
+
+.padding-inline-13 {
+	padding-inline: var(--size-13);
+}
+
+.padding-inline-14 {
+	padding-inline: var(--size-14);
+}
+
+.padding-inline-15 {
+	padding-inline: var(--size-15);
+}
+
+.padding-block-000 {
+	padding-block: var(--size-000);
+}
+
+.padding-block-00 {
+	padding-block: var(--size-00);
+}
+
+.padding-block-0 {
+	padding-block: 0;
 }
 
 .padding-block-1 {
@@ -74,6 +178,54 @@
 	padding-block: var(--size-6);
 }
 
+.padding-block-7 {
+	padding-block: var(--size-7);
+}
+
+.padding-block-8 {
+	padding-block: var(--size-8);
+}
+
+.padding-block-9 {
+	padding-block: var(--size-9);
+}
+
+.padding-block-10 {
+	padding-block: var(--size-10);
+}
+
+.padding-block-11 {
+	padding-block: var(--size-11);
+}
+
+.padding-block-12 {
+	padding-block: var(--size-12);
+}
+
+.padding-block-13 {
+	padding-block: var(--size-13);
+}
+
+.padding-block-14 {
+	padding-block: var(--size-14);
+}
+
+.padding-block-15 {
+	padding-block: var(--size-15);
+}
+
+.padding-inline-start-000 {
+	padding-inline-start: var(--size-000);
+}
+
+.padding-inline-start-00 {
+	padding-inline-start: var(--size-00);
+}
+
+.padding-inline-start-0 {
+	padding-inline-start: 0;
+}
+
 .padding-inline-start-1 {
 	padding-inline-start: var(--size-1);
 }
@@ -96,6 +248,54 @@
 
 .padding-inline-start-6 {
 	padding-inline-start: var(--size-6);
+}
+
+.padding-inline-start-7 {
+	padding-inline-start: var(--size-7);
+}
+
+.padding-inline-start-8 {
+	padding-inline-start: var(--size-8);
+}
+
+.padding-inline-start-9 {
+	padding-inline-start: var(--size-9);
+}
+
+.padding-inline-start-10 {
+	padding-inline-start: var(--size-10);
+}
+
+.padding-inline-start-11 {
+	padding-inline-start: var(--size-11);
+}
+
+.padding-inline-start-12 {
+	padding-inline-start: var(--size-12);
+}
+
+.padding-inline-start-13 {
+	padding-inline-start: var(--size-13);
+}
+
+.padding-inline-start-14 {
+	padding-inline-start: var(--size-14);
+}
+
+.padding-inline-start-15 {
+	padding-inline-start: var(--size-15);
+}
+
+.padding-inline-end-000 {
+	padding-inline-end: var(--size-000);
+}
+
+.padding-inline-end-00 {
+	padding-inline-end: var(--size-00);
+}
+
+.padding-inline-end-0 {
+	padding-inline-end: 0;
 }
 
 .padding-inline-end-1 {
@@ -122,6 +322,54 @@
 	padding-inline-end: var(--size-6);
 }
 
+.padding-inline-end-7 {
+	padding-inline-end: var(--size-7);
+}
+
+.padding-inline-end-8 {
+	padding-inline-end: var(--size-8);
+}
+
+.padding-inline-end-9 {
+	padding-inline-end: var(--size-9);
+}
+
+.padding-inline-end-10 {
+	padding-inline-end: var(--size-10);
+}
+
+.padding-inline-end-11 {
+	padding-inline-end: var(--size-11);
+}
+
+.padding-inline-end-12 {
+	padding-inline-end: var(--size-12);
+}
+
+.padding-inline-end-13 {
+	padding-inline-end: var(--size-13);
+}
+
+.padding-inline-end-14 {
+	padding-inline-end: var(--size-14);
+}
+
+.padding-inline-end-15 {
+	padding-inline-end: var(--size-15);
+}
+
+.padding-block-start-000 {
+	padding-block-start: var(--size-000);
+}
+
+.padding-block-start-00 {
+	padding-block-start: var(--size-00);
+}
+
+.padding-block-start-0 {
+	padding-block-start: 0;
+}
+
 .padding-block-start-1 {
 	padding-block-start: var(--size-1);
 }
@@ -146,6 +394,54 @@
 	padding-block-start: var(--size-6);
 }
 
+.padding-block-start-7 {
+	padding-block-start: var(--size-7);
+}
+
+.padding-block-start-8 {
+	padding-block-start: var(--size-8);
+}
+
+.padding-block-start-9 {
+	padding-block-start: var(--size-9);
+}
+
+.padding-block-start-10 {
+	padding-block-start: var(--size-10);
+}
+
+.padding-block-start-11 {
+	padding-block-start: var(--size-11);
+}
+
+.padding-block-start-12 {
+	padding-block-start: var(--size-12);
+}
+
+.padding-block-start-13 {
+	padding-block-start: var(--size-13);
+}
+
+.padding-block-start-14 {
+	padding-block-start: var(--size-14);
+}
+
+.padding-block-start-15 {
+	padding-block-start: var(--size-15);
+}
+
+.padding-block-end-000 {
+	padding-block-end: var(--size-000);
+}
+
+.padding-block-end-00 {
+	padding-block-end: var(--size-00);
+}
+
+.padding-block-end-0 {
+	padding-block-end: 0;
+}
+
 .padding-block-end-1 {
 	padding-block-end: var(--size-1);
 }
@@ -168,4 +464,40 @@
 
 .padding-block-end-6 {
 	padding-block-end: var(--size-6);
+}
+
+.padding-block-end-7 {
+	padding-block-end: var(--size-7);
+}
+
+.padding-block-end-8 {
+	padding-block-end: var(--size-8);
+}
+
+.padding-block-end-9 {
+	padding-block-end: var(--size-9);
+}
+
+.padding-block-end-10 {
+	padding-block-end: var(--size-10);
+}
+
+.padding-block-end-11 {
+	padding-block-end: var(--size-11);
+}
+
+.padding-block-end-12 {
+	padding-block-end: var(--size-12);
+}
+
+.padding-block-end-13 {
+	padding-block-end: var(--size-13);
+}
+
+.padding-block-end-14 {
+	padding-block-end: var(--size-14);
+}
+
+.padding-block-end-15 {
+	padding-block-end: var(--size-15);
 }
