Updating <mark> styles

--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -201,6 +201,7 @@ input:is([type="checkbox"], [type="radio"]) {
 /* Typography */
 
 mark {
+	background: var(--accent-bg);
 	border-radius: var(--radius-2);
 	padding-inline: var(--size-1);
 }
